crates/xlate/tests/snapshots/golden_matrix__meta_store_and_metadata__gpt-4o-mini__20260910__chat_to_responses__gpt4o.snap
---
source: crates/xlate/tests/golden_matrix.rs
expression: rendered
---
--- body ---
{
  "model": "gpt-4o",
  "input": [
    {
      "type": "message",
      "role": "user",
      "content": [
        {
          "type": "input_text",
          "text": "Say ok."
        }
      ]
    }
  ],
  "max_output_tokens": 32,
  "store": true,
  "metadata": {
    "run": "20260910-042135"
  }
}
--- headers ---
content-type: application/json
upstream_streams: false
--- degraded ---
